--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,8 +28,14 @@
         <h1><a href="{{ "/" | relative_url }}">{{ site.title | default: "My Lab" }}</a></h1>
         <p>{{ site.description }}</p>
         
-        <p class="view"><a href="{{ "/" | relative_url }}">Home</a></p>
-        <p class="view"><a href="https://github.com/{{ site.github.owner_name }}">View GitHub Profile</a></p>
+<nav>
+          <ul>
+            <li><a href="{{ "/" | relative_url }}">Home</a></li>
+            <li><a href="{{ "/about.html" | relative_url }}">About Me</a></li>
+            <li><a href="{{ "/projects.html" | relative_url }}">Projects</a></li>
+            <li><a href="https://github.com/{{ site.github.owner_name }}">GitHub Profile</a></li>
+          </ul>
+        </nav>
       </header>
       
       <section>
