--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
   <body>
   <header>
     <div class="header-container">
-      <h3><a href="{{ "/" | relative_url }}" style="color: var(--primary-blue); text-decoration: none;">RAHUL.DEV</a></h3>
+      <h3><a href="{{ "/" | relative_url }}" style="color: var(--primary-blue); text-decoration: none;">POONAM SIKARWAR</a></h3>
       <nav>
         <ul>
           <li><a href="{{ "/" | relative_url }}">Home</a></li>
