--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,7 @@
     {{ content }}
   </main>
 
+  </footer>
 <footer style="background: #f7fafc; padding: 40px 0; text-align: center; margin-top: 50px;">
     <p style="color: #718096; font-size: 0.9rem;">&copy; 2026 Semiconductor Learning Lab.</p>
     
