--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
     <p style="color: #718096; font-size: 0.9rem;">&copy; 2026 Semiconductor Learning Lab.</p>
     
     <div style="margin-top: 15px;">
-      <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2FSikarwarPoonam.github.io&count_bg=%23ff6600&title_bg=%23004d99&title=Total+Views&edge_flat=true" alt="Visitor Count">
+      <img src="https://api.visitorbadge.io/api/visitors?path=SikarwarPoonam.github.io&label=Total%20Views&labelColor=%23004d99&countColor=%23ff6600" alt="Visitor Count">
     </div>
     
   </footer>
